@@ -3,6 +3,8 @@ Version 1.4.2
 * Start adding state counting for use in power detection.  2-bit sampling supported only at this time.
 * Add m5tsys
 * Can now make RedHat RPM
+* Fix some memory leaks identified by valgrind.
+* Introduce new_mark5_stream_absorb.  like new_mark5_stream, but it cleanly and immediately deallocates space for the temporary mark5_stream_generic and mark5_format_generic structures
 
 Version 1.4.1
 * revert to standard "c" types (long long, unsigned char, ...) over int64_t, uint8_t
